--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>Hello, I'm Paul </h1>
-    <img id="profile-pic" src="photo.HEIC" alt="Paul van der Klink">
+    <img id="profile-pic" src="images/photo.HEIC" alt="Paul van der Klink">
 
     <p>
       I am a student at the University of St. Gallen, currently on exchange at ESSEC Business School.
